@@ -2,6 +2,12 @@
 
     - Form and elements inside template files now have access to original
       object via self.object
+    
+    - Having a named Multi block within a Block with nested_name set, now works.
+    
+    - New Element method is_block() which is true for Block elements.
+    
+    - Multi no longers sets is_field(0) - it's now true for both is_field() and is_block().
 
 0.03002 2008-08-11
 
